app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: will-app
  labels:
    app: will
spec:
  selector:
    app: will
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
