app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: will-service
            port:
              number: 8888
